# oraclechallenger

./: .gitignore  .gitmodules  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
frontend/: package-lock 2.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/components/: ConnectWallet.tsx  UserProfile.tsx  UserRanking.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: connectWallet.ts  mockService.ts  multiversx.ts
frontend/src/types/: global.d.ts  multiversx.d.ts
smart-contracts/oracle-contract/: Cargo.toml
smart-contracts/oracle-contract/src/: lib.rs
