[package]
name = "oracle-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
multiversx-sc = "0.43.4"

[dev-dependencies]
multiversx-sc-scenario = "0.43.4"

[workspace]
members = ["."]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols" 